--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "@aws-sdk/client-dynamodb": "^3.513.0",
     "@aws-sdk/client-s3": "^3.513.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
