--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
+    "axios": "^1.6.7",
     "date-fns": "^3.2.0",
     "firebase": "^10.8.0",
     "flowbite": "^2.2.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-plx": "^2.1.2",
     "react-scroll-parallax": "^3.4.5",
