--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,12 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.513.0",
     "@aws-sdk/client-s3": "^3.513.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "uuid": "^9.0.1"
